@@ -62,6 +62,7 @@
 35. Use com.googlecode.cantata instead of org.kde.cantata for DBUS service, etc.
 36. Add action icons to grouped-albums style playlists at the top level.
 37. Scale image in lyrics view if it is less than 300x300px
+38. Allow to move streams to different categories via drag-n-drop.
 
 0.9.2
 -----
